# dictionarydb

./: .gitignore  .pydocstyle  CONTRIBUTING.md  Dockerfile  LICENSE.md  Makefile  README.md  README.rst  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/workflows/: codeql.yml  deploy.yml  test.yml
dictionarydb/: __main__.py  api.py  config.py  importer.py  language.py  models.py  parser.py
tests/: conftest.py  test_api.py  test_config.py  test_importer.py  test_language.py  test_main.py  test_models.py  test_parser.py
