[tool.poetry]
name = "dictionarydb"
version = "0.1.0"
description = "Command-line tool to set up a translation dictionary database."
readme = 'README.md'
homepage = "https://github.com/mkai/dictionarydb"
repository = "https://github.com/mkai/dictionarydb"
authors = ["Markus Kaiserswerth <github@sensun.org>"]
keywords = ["education", "language", "translations", "dictionary", "database", "import"]
classifiers = ["Topic :: Education", "Intended Audience :: Education"]

[tool.poetry.dependencies]
python = "^3.7"
prettyconf = "^2.1.0"
coloredlogs = "^14.0"
click = "^7.1.2"
SQLAlchemy = "^1.3.19"
contexttimer = "^0.3.3"
more-itertools = "^8.5.0"
humanfriendly = "^8.2"
iso-639 = "^0.4.5"
fastapi = "^0.61.1"
uvicorn = "^0.12.1"
databases = "^0.3.2"
requests = "^2.24.0"
importlib-metadata = { version = "^2.0", python = "<3.8" }

psycopg2 = { version = "^2.8.6", optional = true }
asyncpg = { version = "^0.21.0", optional = true }
aiosqlite = { version = "^0.15.0", optional = true }

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
pydocstyle = "^5.1.1"
docutils = "^0.16"
pytest = "^6.1.1"
pytest-cov = "^2.10.1"
pytest-click = "^1.0.2"

[tool.poetry.extras]
sqlite = ["aiosqlite"]
postgresql = ["psycopg2", "asyncpg"]

[tool.poetry.scripts]
dictionarydb = "dictionarydb.__main__:dictionarydb"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
